--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="SYSTEM"
 APP_ENV=local
 APP_KEY=base64:Z/mCVg1QL6wD1v3+Lous495TxTKc3s6Pwxiro5ZrjXM=
 APP_DEBUG=true
@@ -28,12 +28,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=test02212000@gmail.com
+MAIL_PASSWORD=mszngvqgtrxruoks
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=test02212000@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
